# BB-PAXDATA

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  alembic.ini  coverage.xml  docker-compose.yml  fail_reasons.txt  mypy.ini  mypy_errors.txt  mypy_report.txt  pyproject.toml  ruff_errors.txt
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 002_add_prompt_version.py  050ff3fd782c_add_country_network_entities.py  1ef902da8b4f_faz5_manual_topic_additions.py  20260512_add_quality_assurance_tables.py  2026_05_16_faz4_network_and_dyadic.py  378a5aaa5bbd_initial_schema.py  7b0a258705f4_add_temporal_and_ai_views.py  9652d437d1c3_merge_heads.py
bb_paxdata_anomaly/core/: models.py  service.py
bb_paxdata_anomaly/rules/: __init__.py  entity_flip.py  frame_contradiction.py  missing_gpe.py  overlapping_claim.py  speaker_inconsistency.py  temporal_gap.py  tone_drift.py  translation_artifact.py
bb_paxdata_anomaly/tests/: base.py  test_entity_flip.py  test_frame_contradiction.py  test_missing_gpe.py  test_modal_collapse.py  test_overlapping_claim.py  test_recovery_failure.py  test_service.py  test_speaker_inconsistency.py  test_temporal_gap.py  test_tone_drift.py  test_translation_artifact.py
bb_paxdata_anomaly/utils/: __init__.py  confidence.py
scratch/: check_db.py
scripts/: download_spacy_models.py  generate_golden_candidates.py
src/bb_paxdata/anomaly/: __init__.py
src/bb_paxdata/anomaly/core/: __init__.py  context.py  models.py  protocols.py  service.py
src/bb_paxdata/anomaly/rules/: base.py  entity_flip.py  frame_contradiction.py  missing_gpe.py  modal_collapse.py  overlapping_claim.py  recovery_failure.py  translation_artifact.py
src/bb_paxdata/anomaly/utils/: confidence.py  statistics.py
src/bb_paxdata/application/: protocols.py
src/bb_paxdata/application/commands/: build.py
src/bb_paxdata/application/pipeline/: analysis_pipeline.py  assembler.py  dki_assembler.py  sbi_calculator.py
src/bb_paxdata/config/: __init__.py  base.py  constants.py  logging.py  settings.py
src/bb_paxdata/core/: config.py
src/bb_paxdata/domain/: __init__.py  enums.py  exceptions.py
src/bb_paxdata/quality/: README.md  __init__.py  consistency.py  data_contract.py  evaluator.py  frame_evaluator.py  human_review.py  pipeline.py  review_queue.py  topic_validator.py  uncertainty.py  violations.py
tests/: test_e2e_pipeline.py  test_init.py  test_phase2_logic.py
tests/anomaly/: base.py  test_entity_flip.py  test_frame_contradiction.py  test_missing_gpe.py  test_modal_collapse.py  test_overlapping_claim.py  test_recovery_failure.py  test_service.py  test_speaker_inconsistency.py  test_temporal_gap.py  test_tone_drift.py  test_translation_artifact.py
tests/application/: test_aggregate_bilateral_sentiment.py  test_build_panel_network.py
tests/application/services/: test_cross_anomaly.py
tests/config/: test_settings.py
tests/domain/: test_country_models.py
tests/domain/services/: test_cross_anomaly_service.py  test_framing_service.py  test_hedging_service.py  test_risk_service.py  test_sentiment_service.py  test_service_container.py  test_topic_service.py
tests/fixtures/: golden_dataset.json  golden_dataset.py  golden_dataset_schema.json
tests/infrastructure/: test_country_repositories.py
tests/infrastructure/nlp/: test_dynamic_position.py  test_ensemble_sentiment.py  test_fischer_dna.py  test_liwc_proxy.py  test_lodp_service.py  test_maoz_dyadic.py  test_semantic_shift.py  test_topic_modeling.py  test_wordfish_scaler.py  test_wordscores_calibrator.py
tests/integration/: test_pipeline_risk_power.py
tests/interfaces/: test_analyze_commands.py
tests/quality/: test_cross_anomaly_negation.py  test_cross_anomaly_risk.py  test_data_contract.py  test_duplicate_protection.py  test_quality_evaluator.py  test_quality_pipeline_integration.py  test_uncertainty_scorer.py
tests/tools/: annotate_golden.py
tests/unit/application/: test_episodic_thematic.py
tests/unit/domain/: test_dependency_service.py  test_explainability.py  test_frame_type.py  test_hedge_type.py  test_language_detector.py
tests/unit/infrastructure/: test_encoding_normalizer.py  test_prompt_registry_models.py  test_spacy_manager.py
tests/unit/quality/: test_human_review_models.py  test_topic_coherence.py
(+245 files in other folders)
