[tool.poetry]
name = "bb-paxdata"
version = "6.0.0"
description = "Diplomatik Söylem Analiz Motoru"
authors = ["BB-PAXDATA Team"]
packages = [{include = "bb_paxdata", from = "src"}]

[tool.poetry.scripts]
bbdbda = "bb_paxdata.interfaces.cli.main:entrypoint"

[tool.poetry.dependencies]
python          = "^3.12"
pydantic        = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy      = {version = "^2.0", extras = ["asyncio"]}
aiosqlite       = "^0.20"
alembic         = "^1.13"
typer           = {version = "^0.12", extras = ["all"]}
rich            = "^13.7"
structlog       = "^24.2"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.2"
pytest-asyncio  = "^0.23"
mypy            = "^1.10"
ruff            = "^0.4"
pre-commit      = "^4.0"
black           = "^24.4"



[tool.mypy]
strict              = true
python_version      = "3.12"
plugins             = ["pydantic.mypy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC", "PLE", "PLR", "PLW", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]