[tool.poetry]
name = "bb-paxdata"
version = "6.0.0"
description = "Diplomatik Söylem Analiz Motoru"
authors = ["BB-PAXDATA Team"]
packages = [{include = "bb_paxdata", from = "src"}]

[tool.poetry.scripts]
bbdbda = "bb_paxdata.interfaces.cli.main:entrypoint"

[tool.poetry.dependencies]
python          = "^3.12"
pydantic        = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy      = {version = "^2.0", extras = ["asyncio"]}
aiosqlite       = "^0.20"
alembic         = "^1.13"
typer           = {version = "^0.12", extras = ["all"]}
rich            = "^13.7"
structlog       = "^24.2"
pandas          = "^2.2"
pandera         = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.2"
pytest-asyncio  = "^0.23"
mypy            = "^1.10"
ruff            = "^0.4"
pre-commit      = "^4.0"
black           = "^24.4"
pandas-stubs    = "^2.2"



[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_untyped_imports = false
disable_error_code = ["import-untyped", "import-not-found", "misc"]
plugins = ["pydantic.mypy", "pandera.mypy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = [
    "PLR2004", "PLR0913", "PLR0912", "PLR0915", "PLR0911",
    "RUF001", "RUF002", "RUF003", "RUF012",
    "E501", "PLW0603", "PLW2901"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]