[tool.poetry]
name = "bb-paxdata"
version = "6.0.0"
description = "Diplomatik Söylem Analiz Motoru"
authors = ["BB-PAXDATA Team"]
packages = [
    {include = "bb_paxdata", from = "src"}
]

[tool.poetry.scripts]
bbpaxdata = "bb_paxdata.interfaces.cli.main:entrypoint"

[tool.poetry.dependencies]
python          = "^3.12"
pydantic        = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy      = {version = "^2.0", extras = ["asyncio"]}
aiosqlite       = "^0.20"
alembic         = "^1.13"
typer           = "^0.25.1"
rich            = ">=13.7,<15.0"
structlog       = "^24.2"
pandas          = "^2.2"
pandera         = ">=0.20.0"
spacy           = "^3.7"
vaderSentiment  = "^3.3"
langdetect      = "^1.0"
networkx        = "^3.0"
numpy           = "^2.0"
scipy           = "^1.13"
scikit-learn    = "^1.5"
bertopic        = "^0.16.0"
sentence-transformers = "^3.0"
umap-learn      = "^0.5.6"
hdbscan         = "^0.8.33"
ftfy = "^6.3.1"
deepeval = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.2"
pytest-asyncio  = "^0.23"
mypy            = "^1.10"
ruff            = "^0.4"
pre-commit      = "^4.0"
black           = "^24.4"
pandas-stubs    = "^2.2"
jsonschema = "^4.26.0"



[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped", "import-not-found", "misc"]
plugins = ["pydantic.mypy", "pandera.mypy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = [
    "PLR2004", "PLR0913", "PLR0912", "PLR0915", "PLR0911",
    "RUF001", "RUF002", "RUF003", "RUF012",
    "E501", "PLW0603", "PLW2901", "PLC0415"
]

[tool.ruff.lint.per-file-ignores]
"src/bb_paxdata/interfaces/cli/main.py" = ["PLC0415", "E402"]
"src/bb_paxdata/application/commands/build.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]